--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         h1, h2, h3, .font-cinzel {
             font-family: 'Cinzel', serif;
         }
-        /* Custom scrollbar for themed look */
         ::-webkit-scrollbar {
             width: 8px;
         }
@@ -34,17 +33,20 @@
 <script type="importmap">
 {
   "imports": {
-    "three": "https://esm.sh/three@^0.182.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
+    "three": "https://esm.sh/three@^0.182.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
